feat(contrato): Adicionado view do contrato e registro de data
- Agora é possível visualizar o contrato antes de assinar ele
- Solicita dados em modal para confirmar a assinatura
- Datas foram adicionadas ao dashboard para verificar quando um contrato é gerado
